[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/GameUI/BarBig/BigBar.gd" type="Script" id=1]
[ext_resource path="res://scenes/GameUI/BarBig/bar-bottom.png" type="Texture" id=2]
[ext_resource path="res://scenes/GameUI/BarBig/bar-top.png" type="Texture" id=3]
[ext_resource path="res://scenes/GameUI/BarBig/bar-middle.png" type="Texture" id=4]

[node name="BigBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1080.0
margin_bottom = -700.0
rect_min_size = Vector2( 200, 20 )
script = ExtResource( 1 )

[node name="BarUnder" type="TextureProgress" parent="."]
margin_right = 200.0
margin_bottom = 20.0
value = 50.0
rounded = true
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true

[node name="BarOver" type="TextureProgress" parent="."]
margin_right = 200.0
margin_bottom = 20.0
value = 50.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true

[node name="UpdateTween" type="Tween" parent="."]
